--- a/output/v4/styles/clean-jsdoc-theme-base.css
+++ b/output/v4/styles/clean-jsdoc-theme-base.css
@@ -513,7 +513,17 @@ code {
 .sidebar-section-children-container {
 	border-radius: 0.5rem;
 	overflow: hidden;
+}
 
+.sidebar-section-children-container-children {
+  margin-left: 10px;
+}
+
+.sidebar-section-children .hook-type {
+  border: solid 1px;
+  border-radius: 20px;
+  font-size: 10px;
+  padding: 2px 5px;
 }
 
 .sidebar-section-children a {
