--- a/tmpl/container.tmpl
+++ b/tmpl/container.tmpl
@@ -17,7 +17,6 @@
 <?js } else { ?>
 
 <section>
-
 <?js if (((doc.ancestors && doc.ancestors.length) || doc.name || doc.variation) || (doc.kind === 'module' && doc.modules)) { ?>
 <header>
     <?js if (!doc.longname || doc.kind !== 'module') { ?>
@@ -60,8 +59,8 @@
         <?js doc.modules.forEach(function(module) { ?>
             <?js= self.partial('method.tmpl', module) ?>
         <?js }) ?>
-    <?js } else if (doc.kind === 'class' || (doc.kind === 'namespace' && doc.signature)) { ?>
-        <?js= self.partial('method.tmpl', doc) ?>
+    <?js } else if (doc.kind === 'class' || (doc.kind === 'namespace' && doc.signature) || doc.kind === 'hook' ) { ?>
+        <?js= self.partial('hook.tmpl', doc) ?>
     <?js } else { ?>
         <?js if (doc.description) { ?>
             <div class="description"><?js= doc.description ?></div>
