--- a/tmpl/hook.tmpl
+++ b/tmpl/hook.tmpl
@@ -1,7 +1,7 @@
 <?js
 var data = obj;
 var self = this;
-const language = data.fileType.toLowerCase();
+const language = data?.fileType?.toLowerCase();
 
 ?>
 
